add fully coupled THM example, add citation to thermalengine publication

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -168,6 +168,20 @@
      url={opengeomechanics.centre-mersenne.org/item/OGEO_2020__2__A2_0/}
 }
 
+@article{Caulk2020b,
+		title = "A pore-scale thermo–hydro-mechanical model for particulate systems",
+		journal = "Computer Methods in Applied Mechanics and Engineering",
+		volume = "372",
+		pages = "113292",
+		year = "2020",
+		issn = "0045-7825",
+		doi = "https://doi.org/10.1016/j.cma.2020.113292",
+		url = "http://www.sciencedirect.com/science/article/pii/S0045782520304771",
+		author = "Robert Caulk and Luc Sholtès and Marek Krzaczek and Bruno Chareyre",
+		keywords = "DEM, Pore network, Heat transfer, Fluid flow, Thermo–hydro-mechanical couplings",
+		abstract = "A pore scale numerical method dedicated to the simulation of heat transfer and associated thermo–hydro-mechanical couplings in granular media is described. The proposed thermo–hydro-mechanical approach builds on an existing hydro-mechanical model that employs the discrete element method for simulating the mechanical behavior of dense sphere packings and combines it with the finite volume method for simulating pore space fluid flow and the resulting hydro-mechanical coupling. Within the hydro-mechanical framework, the pore space is discretized as a tetrahedral network whose geometry is defined by the triangulation of discrete element method (DEM) particle centers. It is this discretization of DEM particle contacts and tetrahedral pore spaces that enables the efficient conductive and advective heat transfer models proposed herein. In particular, conductive heat transfer is modeled explicitly between and within solid and fluid phases: across DEM particle contacts, between adjacent tetrahedral pores, and between pores and incident particles. Meanwhile, advective heat transfer is added to the existing implicit fluid flow scheme by estimating mass–energy–flux from pressure induced fluid fluxes. In addition to the heat transfer model, a thermo-mechanical coupling is implemented by considering volume changes based on the thermal expansion of particles and fluid. The conduction and advection models are verified by presenting comparisons to an analytical solution for conduction and a fully resolved numerical solution for conduction and advection. Finally, the relevance of the fully coupled thermo–hydro-mechanical model is illustrated by simulating an experiment where a saturated porous rock sample is subjected to a cyclic temperature loading."
+}
+
 @article{Chalak2017,
   title={Partially saturated media: from DEM simulation to thermodynamic interpretation},
   author={Chalak, C. and Chareyre, B. and Nikooee, E. and Darve, F.},
