--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -41,6 +41,16 @@
   publisher={Elsevier}
 }
 
+
+@article{Benniou2020,
+  title={Discrete element modeling of concrete under high stress level: influence of saturation ratio},
+  author={Benniou, Hicham and Accary, Abdallah and Malecot, Yann Briffaut, Matthieu and Daudeville,Laurent},
+  journal={Computational Particle Mechanics},
+  doi ={10.1007/s40571-020-00318-5},
+  year={2020},
+  publisher={Springer}
+}
+
 @article{Bonilla2015,
 	year={2015},
 	journal={Acta Geotechnica},
@@ -178,8 +188,7 @@
 		doi = "https://doi.org/10.1016/j.cma.2020.113292",
 		url = "http://www.sciencedirect.com/science/article/pii/S0045782520304771",
 		author = "Robert Caulk and Luc Sholtès and Marek Krzaczek and Bruno Chareyre",
-		keywords = "DEM, Pore network, Heat transfer, Fluid flow, Thermo–hydro-mechanical couplings",
-		abstract = "A pore scale numerical method dedicated to the simulation of heat transfer and associated thermo–hydro-mechanical couplings in granular media is described. The proposed thermo–hydro-mechanical approach builds on an existing hydro-mechanical model that employs the discrete element method for simulating the mechanical behavior of dense sphere packings and combines it with the finite volume method for simulating pore space fluid flow and the resulting hydro-mechanical coupling. Within the hydro-mechanical framework, the pore space is discretized as a tetrahedral network whose geometry is defined by the triangulation of discrete element method (DEM) particle centers. It is this discretization of DEM particle contacts and tetrahedral pore spaces that enables the efficient conductive and advective heat transfer models proposed herein. In particular, conductive heat transfer is modeled explicitly between and within solid and fluid phases: across DEM particle contacts, between adjacent tetrahedral pores, and between pores and incident particles. Meanwhile, advective heat transfer is added to the existing implicit fluid flow scheme by estimating mass–energy–flux from pressure induced fluid fluxes. In addition to the heat transfer model, a thermo-mechanical coupling is implemented by considering volume changes based on the thermal expansion of particles and fluid. The conduction and advection models are verified by presenting comparisons to an analytical solution for conduction and a fully resolved numerical solution for conduction and advection. Finally, the relevance of the fully coupled thermo–hydro-mechanical model is illustrated by simulating an experiment where a saturated porous rock sample is subjected to a cyclic temperature loading."
+		keywords = "DEM, Pore network, Heat transfer, Fluid flow, Thermo–hydro-mechanical couplings"
 }
 
 @article{Chalak2017,
@@ -256,6 +265,27 @@
 	url = {http://www.sciencedirect.com/science/article/pii/S0266352X1630060X},
 	volume = {76},
 	year = {2016}
+}
+
+@article{Chevremont2019,
+  title={Quantitative study of the rheology of frictional suspensions: Influence of friction coefficient in a large range of viscous numbers},
+  author={Chèvremont, William and Chareyre, Bruno and Bodiguel, Hugues},
+  journal={Physical Review Fluids},
+  volume={4},
+  number={6},
+  pages={064302},
+  year={2019},
+  publisher={American Physical Society}
+}
+
+@article{Chevremont2020,
+  title={Lubricated contact model for numerical simulations of suspensions},
+  author={Chèvremont, William and Bodiguel, Hugues and Chareyre, Bruno},
+  journal={Powder Technology},
+  volume={372},
+  pages={600--610},
+  year={2020},
+  publisher={Elsevier}
 }
 
 @article{Cuomo2016,
@@ -1003,6 +1033,26 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
   url = {http://link.aps.org/doi/10.1103/PhysRevE.94.052905}
 }
 
+@article{Montella2020,
+  title={Hybrid multi-scale model for partially saturated media based on a pore network approach and lattice boltzmann method},
+  author={Montellà, Eduard Puig and Yuan, Chao and Chareyre, Bruno and Gens, Antonio},
+  journal={Advances in Water Resources},
+  volume={144},
+  pages={103709},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{Montella2020b,
+  title={Benchmark cases for a multi-component Lattice--Boltzmann method in hydrostatic conditions},
+  author={Montellà, EP and Chareyre, B and Salager, S and Gens, A},
+  journal={MethodsX},
+  volume={7},
+  pages={101090},
+  year={2020},
+  publisher={Elsevier}
+}
+
 @article{Niedostatkiewicz2013,
 	title={{Discrete modelling results of a direct shear test for granular materials versus FE results.}},
 	author={M. Niedostatkiewicz, J. Kozicki, J. Tejchman, H.B. Mühlhaus},
@@ -1077,6 +1127,16 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
   year={2017},
   publisher={Elsevier},
   url="https://www.researchgate.net/publication/312590922_Intensity_and_volumetric_characterizations_of_hydraulically_driven_fractures_by_hydro-mechanical_simulations?ev=prf_pub"
+}
+
+@article{Pekmezi2020,
+  title={Statistical distributions of the elastic moduli of particle aggregates at the mesoscale},
+  author={Pekmezi, Gerald and Littlefield, David and Chareyre, Bruno},
+  journal={International Journal of Impact Engineering},
+  volume={139},
+  pages={103481},
+  year={2020},
+  publisher={Pergamon}
 }
 
 @article{Puckett2011,
@@ -1335,6 +1395,14 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
   url={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2017WR021769}
 }
 
+@article{Sweijen2020,
+  title={Unsaturated flow in a packing of swelling particles; a grain-scale model},
+  author={Sweijen, Thomas and Hassanizadeh, S Majid and Chareyre, Bruno},
+  journal={Advances in Water Resources},
+  pages={103642},
+  year={2020}
+}
+
 @article{Tejada2016,
   author={I. G. Tejada and L. Sibille and B. Chareyre},
   title={Role of blockages in particle transport through homogeneous granular assemblies},
@@ -1495,6 +1563,17 @@ author = {R. Wan and J. Duriez and F. Darve}
   year={2018}
 }
 
+@article{Yuan2019,
+  title={Numerical simulation of wetting-induced collapse in partially saturated granular soils},
+  author={Yuan, Chao and Moscariello, Mariagiovanna and Cuomo, Sabatino and Chareyre, Bruno},
+  journal={Granular Matter},
+  volume={21},
+  number={3},
+  pages={64},
+  year={2019},
+  publisher={Springer}
+}
+
 @ARTICLE{Zhao2015,
   author = {J. Zhao and N. Guo},
   title = {The interplay between anisotropy and strain localisation in granular soils: a multiscale insight},
@@ -1513,11 +1592,14 @@ author = {R. Wan and J. Duriez and F. Darve}
   publisher={Elsevier}
 }
 
-@article{Benniou2020,
-  title={Discrete element modeling of concrete under high stress level: influence of saturation ratio},
-  author={Benniou, Hicham and Accary, Abdallah and Malecot, Yann Briffaut, Matthieu and Daudeville,Laurent},
-  journal={Computational Particle Mechanics},
-  doi ={10.1007/s40571-020-00318-5},
-  year={2020},
-  publisher={Springer}
+@article{Zhao2019,
+  title={Comprehensive comparison of pore-scale models for multiphase flow in porous media},
+  author={Zhao, Benzhong and MacMinn, Christopher W and Primkulov, Bauyrzhan K and Chen, Yu and Valocchi, Albert J and Zhao, Jianlin and Kang, Qinjun and Bruning, Kelsey and McClure, James E and Miller, Cass T and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={116},
+  number={28},
+  pages={13799--13806},
+  year={2019},
+  publisher={National Academy of Sciences}
 }
+
