--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -44,7 +44,7 @@
 
 @article{Benniou2020,
   title={Discrete element modeling of concrete under high stress level: influence of saturation ratio},
-  author={Benniou, Hicham and Accary, Abdallah and Malecot, Yann Briffaut, Matthieu and Daudeville,Laurent},
+  author={Benniou, H. and Accary, A. and Malecot, Y. and Briffaut, M. and Daudeville, L.},
   journal={Computational Particle Mechanics},
   doi ={10.1007/s40571-020-00318-5},
   year={2020},
